src/objects/State_Commission_Input__c.object
<CustomObject>
    <description>State Commission input on Concept Paper and Applications when</description>
    <fields>
        <fullName>Application_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application ID</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>State Commission Input</relationshipLabel>
        <relationshipName>State_Commission_Input</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Input_Deadline__c</fullName>
        <formula>Application_ID__r.NOFA_RFP__r.Application_Input_Deadline__c</formula>
        <label>Application Input Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Input_Deadline__c</fullName>
        <formula>Application_ID__r.NOFA_RFP__r.Concept_Paper_Input_Deadline__c</formula>
        <label>Concept Paper Input Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endorsement__c</fullName>
        <label>Endorsement</label>
        <picklist>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do no support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <description>Executive Summary of the Application/Concept Paper.</description>
        <label>Executive Summary</label>
        <length>60000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>State_Commission_User_State__c</fullName>
        <formula>$User.State__c</formula>
        <label>State Commission User - State</label>
        <type>Text</type>
    </fields>
    <label>State Commission Input</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCI - {0000000}</displayFormat>
        <label>State Commission Input Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Commission Input</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <description>State Commission Input for an Application</description>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Concept_Paper</fullName>
        <active>true</active>
        <description>State Commission Input for a Concept Paper</description>
        <label>Concept Paper</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Application_ID_Read_Only</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Application_ID__c )</errorConditionFormula>
        <errorDisplayField>Application_ID__c</errorDisplayField>
        <errorMessage>Cannot change Application ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Application_Input_Deadline_Complete</fullName>
        <active>true</active>
        <description>Application Input cannot be given after the Deadline</description>
        <errorConditionFormula>DATEVALUE(  LastModifiedDate ) &gt; Application_Input_Deadline__c</errorConditionFormula>
        <errorMessage>You cannot add Input after the Application Input Deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concept_Paper_Input_Deadline_Complete</fullName>
        <active>true</active>
        <description>Concept Paper Input cannot be given after the Deadline</description>
        <errorConditionFormula>DATEVALUE(LastModifiedDate) &gt;   Concept_Paper_Input_Deadline__c</errorConditionFormula>
        <errorMessage>You cannot add Input after the Concept Paper Input Deadline</errorMessage>
    </validationRules>
</CustomObject>